2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix GValue binding

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: bind message output functions

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: report error instead of warning when
	  trying to implicitly copy non-reference counted object

2008-01-27  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegeneratorsignal.vala: fix regression introduced
	  with libgee regarding marshaller generation

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: complete GList and GSList bindings

2008-01-26  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-audio-0.10/,
	  vapi/packages/gstreamer-fft-0.10/,
	  vapi/packages/gstreamer-interfaces-0.10/,
	  vapi/packages/gstreamer-netbuffer-0.10/,
	  vapi/packages/gstreamer-pbutils-0.10/,
	  vapi/packages/gstreamer-riff-0.10/,
	  vapi/packages/gstreamer-rtp-0.10/,
	  vapi/packages/gstreamer-rtsp-0.10/,
	  vapi/packages/gstreamer-sdp-0.10/,
	  vapi/packages/gstreamer-tag-0.10/,
	  vapi/packages/gstreamer-video-0.10/: fix cheader_filename of GStreamer
	  libraries, patch by Maciej Piechotka, fixes bug 510834

	* vapi/gstreamer-audio-0.10.vapi, vapi/gstreamer-fft-0.10.vapi,
	  vapi/gstreamer-interfaces-0.10.vapi,
	  vapi/gstreamer-netbuffer-0.10.vapi, vapi/gstreamer-pbutils-0.10.vapi,
	  vapi/gstreamer-riff-0.10.vapi, vapi/gstreamer-rtp-0.10.vapi,
	  vapi/gstreamer-rtsp-0.10.vapi, vapi/gstreamer-sdp-0.10.vapi,
	  vapi/gstreamer-tag-0.10.vapi, vapi/gstreamer-video-0.10.vapi:
	  regenerated

2008-01-26  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: fix critical on parse error in lambda expression,
	  fixes bug 511887

2008-01-26  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix crash with invalid invocation
	  expressions, fixes bug 511823

2008-01-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix crash when using type without