@@ -1403,11 +1403,9 @@ public class Vala.SemanticAnalyzer : CodeVisitor {
 			if (expr.symbol_reference == null && expr.inner.static_type != null) {
 				if (expr.pointer_member_access) {
 					expr.symbol_reference = expr.inner.static_type.get_pointer_member (expr.member_name);
-				} else {
+				} else if (expr.inner.static_type.data_type != null) {
 					base_symbol = expr.inner.static_type.data_type;
-					if (base_symbol != null) {
-						expr.symbol_reference = symbol_lookup_inherited (base_symbol, expr.member_name);
-					}
+					expr.symbol_reference = symbol_lookup_inherited (base_symbol, expr.member_name);
 				}
 				if (expr.symbol_reference != null) {
 					// inner expression is variable, field, or parameter
